[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "baudream"
version = "1.0.0"
authors = [
  { name="xlav", email="cedric.guevremont@umontreal.ca" },
]
dependencies = [
    "pybrowsers"
]
description = "Python package for the presentation of packet managers."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
baudream = "baudream.baudream:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
baudream = ["ressources/*"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/xlav94/baudream"